--- a/templates/cafecrm/drinks.html
+++ b/templates/cafecrm/drinks.html
@@ -11,7 +11,7 @@
 <form action="{% url 'sell_temp:sell_add' %}" method="post">
     {{ sell_drink_form }}
     {% csrf_token %}
-    <input type="submit" value="Add to document">
+    <input type="submit" value="Добавить">
 </form>
 
 </div>
