--- a/templates/cafecrm/products.html
+++ b/templates/cafecrm/products.html
@@ -10,7 +10,7 @@
             <form action="{% url 'doc_temp:doc_add'  %}" method="post">
                 {{ doc_product_form }}
                 {% csrf_token %}
-                <input type="submit" value="Add to document">
+                <input type="submit" value="Добавить">
             </form>
 
 </div>
