--- a/cafecrm/static/cafecrm/css/style.css
+++ b/cafecrm/static/cafecrm/css/style.css
@@ -1,36 +1,18 @@
-.dropdown-span{
-	text-align: center;
-	color: white;
-	background-color: #5bc0de;
+:root{
+	--color-gold: #e0a164
+
 }
-span{
-	color: white;
+
+.table-striped>tbody>tr:nth-of-type(odd)>* {
+    --bs-table-accent-bg: var(--bs-table-striped-bg);
 }
-.footer{
-	text-align: center;
-	position: absolute;
-	padding:10px;
-	color: white;
-	width: 100%;
-	bottom:0;
+
+th{
+	font-weight: inherit;
+	color: rgba(255, 255, 255, 0.8) !important;
 }
-.alink{
-	text-decoration: none;
-	color: white;
-}
-.alink:hover{
-	text-decoration: none;
-	color: white;
-}
-#content{
-	padding-bottom: 5%;
-}
-html,body{
-	margin: 0;
-	padding: 0;
-	height: 100%;
-}
-.wrapper{
-	position: relative;
-	min-height: 100%;
+
+.logo-login{
+	margin-top: 50px;
+	margin-bottom: 50px;
 }
