--- a/templates/cafecrm/base.html
+++ b/templates/cafecrm/base.html
@@ -5,97 +5,106 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'cafecrm/css/style.css' %}" type="text/css">
-
+    <link rel="stylesheet" href="{% static 'cafecrm/css/bootstrap/css/bootstrap.min.css'%}" type="text/css">
+    <script type="text/javascript" src="{% static 'cafecrm/css/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'cafecrm/css/style.css'%}" type="text/css">
 </head>
 
 <body>
-<div class="container-fluid">
-    <div class="row align-items-start" id="nav">
-        {% if user.is_superuser %}
-    	<nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;">
-			<a class="navbar-brand" href="{% url 'cafecrm:home' %}"><h3>{{ user.first_name }}</h3></a>
-
-		  	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		  		<ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'cafecrm:stock' %}" title="Остатки на складе">Остатки</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'cafecrm:menu' %}" title="Что в продаже">Меню</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Создать документ: </a>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="{% url 'cafecrm:add_simple_product' %}" title="Внести новый продукт">Новый продукт</a></li>
-                          <li><a class="dropdown-item" href="{% url 'cafecrm:products' %}">Добавить товар в меню</a></li>
-                          <li><a class="dropdown-item" href="{% url 'cafecrm:drinks' %} ">Продажа</a></li>
-                          <li><a class="dropdown-item" href="{% url 'cafecrm:products' %}">Приход / расход</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="admin/">Панель администратора</a>
-                    </li>
-                <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'cafecrm:logout' %}">Выйти</a>
-                    </li>
-
-                    <li><div class="cart">
-    {% with total_items=doc|length %}
-        {% if doc|length > 0 %}
-
-            <a href="{% url "doc_temp:doc_detail" %}" style="color: red">
-                Есть незаконченный документ
+<div class="container">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+    <a class="navbar-brand" href="{% url 'cafecrm:home' %}">
+      <img src="{% static 'cafecrm/img/minilogo_200x200.png' %}" alt="Logo" width="35" height="35" class="d-inline-block align-text-top">
+      {{ user.first_name }}
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    {% if user.is_superuser %}
+      <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link {% if request.resolver_match.url_name == 'stock' %} active {% endif %}"
+            aria-current="page" href="{% url 'cafecrm:stock' %}"  hreflang="ar">Остатки</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if request.resolver_match.url_name == 'menu' %} active {% endif %}"
+            aria-current="page" href="{% url 'cafecrm:menu' %}">Меню</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle {% if request.resolver_match.url_name == 'add_simple_product' or request.resolver_match.url_name == 'products' or request.resolver_match.url_name == 'drinks'%} active {% endif %}"
+            aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Создать документ
             </a>
-        {% endif %}
-    {% endwith %}
-</div></li>
-		  		</ul>
-		  	</div>
-		</nav>
+            <ul class="dropdown-menu dropdown-menu-dark">
+              <li><a class="dropdown-item" href="{% url 'cafecrm:add_simple_product' %}">Новый продукт</a></li>
+              <li><a class="dropdown-item" href="{% url 'cafecrm:products' %}">Добавить товар в меню</a></li>
+              <li><a class="dropdown-item" href="{% url 'cafecrm:drinks' %}">Продажа</a></li>
+              <li><a class="dropdown-item" href="{% url 'cafecrm:products' %}">Приход / расход</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="admin/">Панель администратора</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'cafecrm:logout' %}">Выйти</a>
+          </li>
+        </ul>
+      </div>
+    {% elif user.is_staff %}
+      <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link {% if request.resolver_match.url_name == 'stock' %} active {% endif %}"
+            aria-current="page" href="{% url 'cafecrm:stock' %}"  hreflang="ar">Остатки</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if request.resolver_match.url_name == 'menu' %} active {% endif %}"
+            aria-current="page" href="{% url 'cafecrm:menu' %}">Меню</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle {% if request.resolver_match.url_name == 'add_simple_product' or request.resolver_match.url_name == 'products' or request.resolver_match.url_name == 'drinks'%} active {% endif %}"
+              aria-current="page" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Создать документ
+            </a>
+              <ul class="dropdown-menu dropdown-menu-dark">
+                <li><a class="dropdown-item" href="{% url 'cafecrm:add_simple_product' %}">Новый продукт</a></li>
+                <li><a class="dropdown-item" href="{% url 'cafecrm:products' %}">Добавить товар в меню</a></li>
+                <li><a class="dropdown-item" href="{% url 'cafecrm:drinks' %}">Продажа</a></li>
+                <li><a class="dropdown-item" href="{% url 'cafecrm:products' %}">Приход / расход</a></li>
+              </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'cafecrm:logout' %}">Выйти</a>
+          </li>
+        </ul>
+      </div>
     {% else %}
-        <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;">
-			<a class="navbar-brand" href="{% url 'cafecrm:home' %}"><h3>{{ user.first_name }}</h3></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  	</button>
-		  	<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		  		<ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'cafecrm:menu' %}">Меню</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'cafecrm:drinks' %}">Продажа</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'cafecrm:logout' %}">Выйти</a>
-                    </li>
-                    <li><div class="cart">
-    {% with total_items=doc|length %}
-        {% if doc|length > 0 %}
-
-            <a href="{% url "doc_temp:doc_detail" %}" style="color: red">
-                Есть незаконченный документ
-            </a>
-        {% endif %}
-    {% endwith %}
-</div></li>
-		  		</ul>
-		  	</div>
-		</nav>
+      <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link {% if request.resolver_match.url_name == 'menu' %} active {% endif %}"
+            aria-current="page" href="{% url 'cafecrm:menu' %}">Меню</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link {% if request.resolver_match.url_name == 'drinks' %} active {% endif %}"
+            aria-current="page" href="{% url 'cafecrm:drinks' %}">Продажа</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'cafecrm:logout' %}">Выйти</a>
+          </li>
+        </ul>
+      </div>
     {% endif %}
     </div>
-    <div id="content">
-        {% block content %}
-        {% endblock %}
-    </div>
+  </nav>
+
+<div class="container">
+{% block content %}
+{% endblock %}
+</div>
+
 </div>
 </body>
 </html>
