--- a/templates/cafecrm/index.html
+++ b/templates/cafecrm/index.html
@@ -1,10 +1,29 @@
-{%  load static %}
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% block content %}
+<head>
+    <link rel="stylesheet" href="{% static 'cafecrm/css/bootstrap/css/bootstrap.min.css'%}" type="text/css">
+    <script type="text/javascript" src="{% static 'cafecrm/css/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'cafecrm/css/style.css'%}" type="text/css">
+</head>
 
-        <form action="." method="post">
+<body>
+  <div class="container-fluid">
+    <div class="container d-flex justify-content-between">
+      <div class="col-3"></div>
+      <div class="col-6 text-center">
+        <img src="{% static 'cafecrm/img/logo_300.png' %}" width="250px" class="logo-login" alt="logo">
+        <div class="login-form">
+          <form action="." method="post">
             {{ form.as_p }}
             {% csrf_token %}
             <input type="submit" value="Login">
-        </form>
-{% endblock %}
+          </form>
+        </div>
+      </div>
+      <div class="col-3"></div>
+    </div>
+  </div>
+</body>
+</html>
